gitops/jaeger/jaeger-gtw.haproxy.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: haproxy-prod-gateway-doordress
  namespace: gateway-infra
spec:
  gatewayClassName: haproxy-doordress
  listeners:
  - name: https
    protocol: HTTP # Correct: ACM terminates TLS at the NLB edge; traffic arrives here as plain HTTP
    port: 443 
    hostname: "*.doordress.us"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "haproxy-prod-gateway"
  - name: http
    protocol: HTTP
    port: 80
    hostname: "*.doordress.us"
    allowedRoutes:
      namespaces:
        from: Selector
        selector:
          matchLabels:
            gateway-access: "haproxy-prod-gateway"

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jaeger-gateway-route
  namespace: jaeger-system
spec:
  parentRefs:
  - name: haproxy-prod-gateway-doordress
    namespace: gateway-infra
    sectionName: https
  hostnames:
  - "jaeger.doordress.us"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: jaeger-query
        namespace: jaeger-system
        port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-jaeger-http-to-https-redirect
  namespace: jaeger-system
spec:
  parentRefs:
  - name: haproxy-prod-gateway-doordress
    namespace: gateway-infra
    sectionName: http # <-- Only targets the plain HTTP port 8000 listener
  hostnames:
  - "jaeger.doordress.us" # Can be a wildcard to upgrade all subdomains globally
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https   # Upgrades the scheme to https
        statusCode: 301 # Permanent redirect

# ---
# apiVersion: gateway.networking.k8s.io/v1beta1
# kind: ReferenceGrant
# metadata:
#   name: allow-gateway-to-httobingo
#   namespace: haproxy-system  # <-- MUST be deployed in the target service's namespace
# spec:
#   from:
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#       namespace: haproxy-system # <-- Replace with the namespace where your HTTPRoute lives
#   to:
#     - group: "" # Empty string denotes core Kubernetes API group
#       kind: Service
#       name: jaeger
